--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm run build
 
       - name: Lint
-        run: npm run lint
+        run: npx eslint
 
       - name: Test
         run: npm test
