--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "npm": ">=6.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
     "@playwright/test": "^1.53.1",
     "@types/node": "^24.0.3",
-    "eslint": "^8.0.0",
+    "globals": "^16.2.0",
     "jest": "^27.0.0",
     "playwright": "^1.0.0"
+  },
+  "dependencies": {
+    "eslint": "^9.29.0"
   }
 }
