--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "playwright": "^1.0.0"
   },
   "dependencies": {
-    "eslint": "^9.29.0"
+    "eslint": "^9.29.0",
+    "express": "^5.1.0"
   }
 }
